[gd_scene load_steps=10 format=3 uid="uid://bg360nmruyjb3"]

[ext_resource type="PackedScene" uid="uid://meu3hhsbxp2r" path="res://Prefabs/Utils/background.tscn" id="1_ghhmk"]
[ext_resource type="Script" path="res://Scripts/Utils/Menus/pause_menu.gd" id="1_wc1it"]
[ext_resource type="FontFile" uid="uid://bplwmjw6xt68g" path="res://Assets/Fonts/JetBrains Mono/JetBrainsMono-ExtraBold.ttf" id="2_sbo7a"]
[ext_resource type="PackedScene" uid="uid://bg763cfhkxihf" path="res://Prefabs/Utils/Buttons/play_button.tscn" id="3_qiepg"]
[ext_resource type="Texture2D" uid="uid://0j7wpinlwayo" path="res://Assets/Icons/exit.svg" id="4_5wwwa"]
[ext_resource type="Script" path="res://Scripts/Utils/Buttons/ui_button.gd" id="5_34mh6"]
[ext_resource type="Texture2D" uid="uid://drtny5txlijln" path="res://Assets/Icons/exit-hover.svg" id="6_yn72e"]

[sub_resource type="LabelSettings" id="LabelSettings_4t8yc"]
font = ExtResource("2_sbo7a")
font_size = 55

[sub_resource type="LabelSettings" id="LabelSettings_xvbc8"]
font_size = 30

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_wc1it")

[node name="Background" parent="." instance=ExtResource("1_ghhmk")]

[node name="Title" type="Label" parent="."]
offset_left = 2.0
offset_top = 40.0
offset_right = 483.0
offset_bottom = 114.0
text = "JOGO PAUSADO"
label_settings = SubResource("LabelSettings_4t8yc")
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -112.0
offset_bottom = 302.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Play" type="VBoxContainer" parent="Buttons"]
layout_mode = 2

[node name="Label" type="Label" parent="Buttons/Play"]
layout_mode = 2
size_flags_horizontal = 4
text = "Voltar a jogar"
label_settings = SubResource("LabelSettings_xvbc8")

[node name="PlayButton" parent="Buttons/Play" instance=ExtResource("3_qiepg")]
layout_mode = 2
size_flags_horizontal = 4

[node name="Exit" type="VBoxContainer" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 6

[node name="Label" type="Label" parent="Buttons/Exit"]
layout_mode = 2
size_flags_horizontal = 4
text = "Desistir
"
label_settings = SubResource("LabelSettings_xvbc8")

[node name="ExitButton" type="TextureButton" parent="Buttons/Exit"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
mouse_default_cursor_shape = 2
texture_normal = ExtResource("4_5wwwa")
texture_hover = ExtResource("6_yn72e")
script = ExtResource("5_34mh6")
